--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,20 @@
-{
-  "npm.packageManager": "pnpm",
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit"
-  },
-  "editor.formatOnSaveMode": "file",
-  "files.insertFinalNewline": true,
+﻿{
+  "files.eol": "\n",
+  "files.encoding": "utf8",
   "files.trimTrailingWhitespace": true,
-  "eslint.rules.customizations": [
-    // Silence some warnings that will get auto-fixed
-    { "rule": "perfectionist/*", "severity": "off", "fixable": true },
-    { "rule": "curly", "severity": "off", "fixable": true },
-    { "rule": "object-shorthand", "severity": "off", "fixable": true }
-  ],
-  "typescript.tsdk": "node_modules/typescript/lib",
-  // Load .git-blame-ignore-revs file
-  "gitlens.advanced.blame.customArguments": ["--ignore-revs-file", ".git-blame-ignore-revs"],
-  "jestrunner.jestCommand": "pnpm exec cross-env NODE_OPTIONS=\"--no-deprecation\" node 'node_modules/jest/bin/jest.js'",
-  "jestrunner.changeDirectoryToWorkspaceRoot": false,
-  "jestrunner.debugOptions": {
-    "runtimeArgs": ["--no-deprecation"]
+  "files.insertFinalNewline": true,
+  "typescript.preferences.quoteStyle": "single",
+  "editor.formatOnSave": false,
+  "files.watcherExclude": {
+    "**/node_modules/**": true,
+    "**/.git/**": true,
+    "**/dist/**": true,
+    "**/.next/**": true
   },
-  // Essentially disables bun test buttons
-  "bun.test.filePattern": "bun.test.ts",
-  "playwright.env": {
-    "NODE_OPTIONS": "--no-deprecation --no-experimental-strip-types"
-  }
+  "search.exclude": {
+    "**/node_modules/**": true,
+    "**/.next/**": true,
+    "**/dist/**": true
+  },
+  "typescript.preferences.includePackageJsonAutoImports": "off"
 }
