--- a/templates/website/package.json
+++ b/templates/website/package.json
@@ -52,6 +52,8 @@
     "prism-react-renderer": "^2.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "14.3.8",
+    "react-google-recaptcha": "3.1.0",
     "react-hook-form": "7.45.4",
     "react-icons": "^5.5.0",
     "sharp": "0.34.2",
@@ -67,6 +69,7 @@
     "@types/node": "22.5.4",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "@types/react-google-recaptcha": "2.1.9",
     "@vitejs/plugin-react": "4.5.2",
     "autoprefixer": "^10.4.19",
     "copyfiles": "^2.4.1",
