--- a/templates/website/package.json
+++ b/templates/website/package.json
@@ -22,6 +22,8 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@auth/core": "0.40.0",
+    "@next-auth/mongodb-adapter": "1.1.3",
     "@payloadcms/admin-bar": "workspace:*",
     "@payloadcms/db-mongodb": "workspace:*",
     "@payloadcms/live-preview-react": "workspace:*",
@@ -47,6 +49,7 @@
     "graphql": "^16.8.2",
     "lucide-react": "^0.378.0",
     "next": "15.4.4",
+    "next-auth": "4.24.11",
     "next-sitemap": "^4.2.3",
     "payload": "workspace:*",
     "prism-react-renderer": "^2.3.1",
